src/objects/SalesRevenue__c.object
<CustomObject>
    <description>This Object has been created as part of the Quick Wins Project. It will be populated from an external system.</description>
    <fields>
        <fullName>AdvertiserID__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>AdvertiserID</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>SalesRevenue</relationshipLabel>
        <relationshipName>SalesRevenue</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BrandID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BrandID</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>SalesRevenue (BrandID)</relationshipLabel>
        <relationshipName>SalesRevenue1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Insertion_End_Date__c</fullName>
        <label>Insertion End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Insertion_Start_Date__c</fullName>
        <label>Insertion Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Invoice_AgencyID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Invoice_AgencyID</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>SalesRevenue (Invoice_AgencyID)</relationshipLabel>
        <relationshipName>SalesRevenue2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Period_End_Date__c</fullName>
        <label>Revenue Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Period_Start_Date__c</fullName>
        <label>Period Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Publication__c</fullName>
        <label>Publication</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Revenue_Amount__c</fullName>
        <label>Revenue Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>SalesRevenue</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Invoice_AgencyID__c</columns>
        <columns>AdvertiserID__c</columns>
        <columns>BrandID__c</columns>
        <columns>Department__c</columns>
        <columns>Insertion_End_Date__c</columns>
        <columns>Insertion_Start_Date__c</columns>
        <columns>Period_Start_Date__c</columns>
        <columns>Publication__c</columns>
        <columns>Revenue_Amount__c</columns>
        <columns>Period_End_Date__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>A-{00000000}</displayFormat>
        <label>SalesRevenue Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SalesRevenue</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>